# 493-project

./: .gitattributes  .gitignore  README.md  pyproject.toml  visualize_data.py
src/: preprocess_data.py  train.py  train_lightning.py  train_optuna.py  visualize_raw_data.py
src/data/: all_accelerometer_data_pids_13.csv  combined_data.csv  small_dataset.csv
src/dataloader/: dataloader.py  dataset.py
src/models/: CNN.py  MLP.py
